# kio-s3

./: .gitignore  CMakeLists.txt  Dockerfile  Messages.sh  README.md  dependency-parser.py  install.sh
.github/workflows/: cmake.yml  docker-publish.yml  release.yml
src/: AWSClient.cpp  AWSClient.h  AWSClientAbstract.cpp  AWSClientAbstract.h  CMakeLists.txt  S3FileSystem.cpp  S3FileSystem.h  kio_aws_s3.cpp  kio_aws_s3.desktop  kio_aws_s3.h  s3.json
tests/: CMakeLists.txt  s3_test.cc  s3_test.cpp
